--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node.boilerplate",
   "version": "0.0.1",
   "description": "node.boilerplate",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +20,7 @@
     "gulp": "^3.9.1",
     "helmet": "^3.12.0",
     "joi": "^13.4.0",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^2.5.3",
     "method-override": "^2.3.10",
     "mysql": "^2.15.0",
