--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cuid": "^2.1.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "fsevents": "^2.0.7",
     "gulp": "^3.9.1",
     "helmet": "^3.12.0",
     "joi": "^13.4.0",
@@ -25,6 +26,7 @@
     "log4js": "^2.5.3",
     "method-override": "^2.3.10",
     "mysql": "^2.15.0",
+    "node-pre-gyp": "^0.13.0",
     "uuid": "^3.3.2",
     "uuid-validate": "0.0.3",
     "validator": "^10.2.0",
