--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "log4js": "^2.5.3",
     "method-override": "^2.3.10",
+    "moment": "^2.24.0",
     "mysql": "^2.15.0",
     "node-pre-gyp": "^0.13.0",
     "uuid": "^3.3.2",
