--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.1",
   "description": "node.boilerplate",
   "main": "server.js",
-  "engines": {
-    "node": "12.13.0"
-  },
   "scripts": {
     "start": "node -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,11 +12,13 @@
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
     "aws-sdk": "^2.263.1",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
+    "cron": "^1.7.2",
     "cuid": "^2.1.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -31,6 +30,7 @@
     "log4js": "^2.5.3",
     "method-override": "^2.3.10",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "mysql": "^2.15.0",
     "node-pre-gyp": "^0.13.0",
     "uuid": "^3.3.2",
