--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
-    "aws-sdk": "^2.263.1",
+    "aws-sdk": "^2.596.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
@@ -31,8 +31,12 @@
     "method-override": "^2.3.10",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "multer-s3-transform": "^2.3.2",
     "mysql": "^2.15.0",
     "node-pre-gyp": "^0.13.0",
+    "sharp": "^0.23.4",
     "uuid": "^3.3.2",
     "uuid-validate": "0.0.3",
     "validator": "^10.2.0",
